--- a/gui.css
+++ b/gui.css
@@ -9,7 +9,7 @@ html {
   left: 0;
   width: 25%;
   padding: 2.5%;
-  background-image: url("images/texture/mint-grid-sample.png");
+  background-image: url("http://quovadis.github.io/images/texture/mint-grid-sample.png");
 }
 .gui-side footer {
   color: white;
@@ -42,7 +42,7 @@ html {
   bottom: 0;
 }
 body {
-  background-image: url("images/texture/paper-sample.png");
+  background-image: url("http://quovadis.github.io/images/texture/paper-sample.png");
 }
 .gui-heading {
   color: #999999;
